modified login page

--- a/core/templates/core/templates/login.html
+++ b/core/templates/core/templates/login.html
@@ -20,15 +20,15 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row-fluid">
         <div class="span4 offset4">
-          <h3></h3>
+          <legend>User Login</legend>
           <form class="form-horizontal">
             <div class="control-group">
-              <label class="control-label" for="name">Name</label>
+              <label class="control-label" for="name">Username</label>
               <div class="controls">
-                <input type="text" id="name" placeholder="Name">
+                <input type="text" id="name" placeholder="username">
               </div>
             </div>
             <div class="control-group">
