modified submission editing page

--- a/core/templates/core/sub_edit.html
+++ b/core/templates/core/sub_edit.html
@@ -42,7 +42,7 @@
       </div>
       <div class="row-fluid">
         <div class="span12">
-          <legend>Submission list</legend>
+          <legend>Submission Editing Page</legend>
           <form class="form-inline well" action="">
               <input type="text" class="" placeholder="Monitor ID">
               <input type="text" class="" placeholder="Monitor Name">
