modified page contents

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <a class="brand" href="#">Apollo</a>
@@ -40,7 +40,7 @@
           </ul>
         </div>
       </div>
-      <div class="row-fluid">
+      <div class="row">
         <div class="span12">
           <legend>Dashboard</legend>
           <form class="form-horizontal well" action="" method="POST" accept-charset="utf-8">
@@ -62,8 +62,8 @@
           </form>
         </div>
       </div>
-      <div class="row-fluid">
-        <div class="span6 well">
+      <div class="row">
+        <div class="span5 well">
           <legend>Setup</legend>
           <div class="progress">
             <div class="bar bar-success" style="width: 30%;"></div>
@@ -93,7 +93,9 @@
           <legend>Maps</legend>
         </div>
       </div>
-      <footer>copyright 2012</footer>
+      <div class="footer">
+        <footer>copyright 2012</footer>
+      </div>
     </div>
   </body>
 </html>
