--- a/core/templates/core/contacts.html
+++ b/core/templates/core/contacts.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <a class="brand" href="#">Apollo</a>
@@ -40,7 +40,7 @@
           </ul>
         </div>
       </div>
-      <div class="row-fluid">
+      <div class="row">
         <div class="span12">
           <legend>Contacts</legend>
           <form class="form-inline well" action="">
