--- a/core/templates/core/sub_edit.html
+++ b/core/templates/core/sub_edit.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <a class="brand" href="#">Apollo</a>
@@ -40,7 +40,7 @@
           </ul>
         </div>
       </div>
-      <div class="row-fluid">
+      <div class="row">
         <div class="span12">
           <legend>Submission Editing Page</legend>
           <form class="form-inline well" action="">
@@ -65,7 +65,7 @@
           </form>
         </div>
       </div>
-      <div class="row-fluid">
+      <div class="row">
         <div class="tabbable tabs-right">
           <ul class="nav nav-tabs">
             <li class="active"><a href="#setup" data-toggle="tab">Setup</a></li>
