--- a/core/templates/core/sub_list.html
+++ b/core/templates/core/sub_list.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <a class="brand" href="#">Apollo</a>
@@ -40,34 +40,43 @@
           </ul>
         </div>
       </div>
-      <div class="row-fluid">
+      <div class="row">
         <div class="span12">
           <legend>Submission list</legend>
           <form class="form-inline well" action="">
               <input type="text" class="" placeholder="Monitor ID">
-              <input type="text" class="" placeholder="Monitor Name">
-              <input type="text" class="" placeholder="Location">
-              <select class="input-medium">
-                <option disabled selected style='display:none;'>- - Monitor Role - -</option>
+              <input type="text" class="" placeholder="Date">
+              <input type="text" class="span4" placeholder="Location">
+              <input type="text" class="span3" placeholder="PDID"><br>
+              <select class="">
+                <option disabled selected style='display:none;'>- - Setup Status - -</option>
                 <option>All</option>
               </select>
-              <select class="input-medium">
-                <option disabled selected style='display:none;'>- - Patner Org - -</option>
+              <select class="">
+                <option disabled selected style='display:none;'>- - Voting Status - -</option>
                 <option>All</option>
               </select>   
-              <select class="input-medium">
-                <option disabled selected style='display:none;'>- - Cell Coverage - -</option>
+              <select class="">
+                <option disabled selected style='display:none;'>- - Closing Status - -</option>
                 <option>All</option>
-              </select class="pad">                 
+              </select> 
+              <select class="">
+                <option disabled selected style='display:none;'>- - Counting Status - -</option>
+                <option>All</option>
+              </select>
+              <select class="">
+                <option disabled selected style='display:none;'>- - EZ ID Match Status - -</option>
+                <option>All</option>
+              </select><br>
               <button class="btn btn-info" type="submit">Filter</button>
               <button class="btn btn-danger" type="submit">Reset</button>
               <button class="btn btn-success" type="submit">SMS</button>
           </form>
         </div>
       </div>
-      <div class="row-fluid">
-        <div class="">
-          <table class="table table-striped">
+      <div class="row">
+        <div class="span12">
+          <table class="table table-striped well">
             <thead >
               <tr>
                 <th>Monitor ID</th>
@@ -76,6 +85,10 @@
                 <th>Polling Station</th>
                 <th>Supervisor</th>
                 <th>Monitor</th>
+                <th>S</th>
+                <th>V</th>
+                <th>Cl</th>
+                <th>Co</th>
                 <th>Edit</th>
               </tr>
             </thead>
@@ -86,7 +99,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td><a href="sub_edit.html">Edit</a></td>
               </tr>
               <tr>
@@ -95,7 +112,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -104,7 +125,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -113,7 +138,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -122,7 +151,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -131,7 +164,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -140,7 +177,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -149,7 +190,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -158,7 +203,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -167,7 +216,11 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
               <tr>
@@ -176,48 +229,55 @@
                 <td>Ikeja</td>
                 <td>Ajanaku</td>
                 <td>Joy Okomowho</td>
-                <td>Tim Akinbo</td>
+                <td>Peter Okoye</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>Edit</td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
-      <div class="row-fluid">
-    <div class="span12">
-      <div class="pagination pagination-centered">
-        <ul>
-          <li>
-            <a href="#">1</a>
-          </li>
-          <li>
-            <a href="#">2</a>
-          </li>
-          <li>
-            <a href="#">3</a>
-          </li>
-          <li>
-            <a href="#">4</a>
-          </li>
-          <li>
-            <a href="#">5</a>
-          </li>
-          <li>
-            <a href="#">6</a>
-          </li>
-          <li>
-            <a href="#">7</a>
-          </li>
-          <li>
-            <a href="#">8</a>
-          </li>
-          <li>
-            <a href="#">>></a>
-          </li>
-        </ul>
+      <div class="row">
+        <div class="span12">
+          <div class="pagination pagination-centered">
+            <ul>
+              <li>
+                <a href="#">1</a>
+              </li>
+              <li>
+                <a href="#">2</a>
+              </li>
+              <li>
+                <a href="#">3</a>
+              </li>
+              <li>
+                <a href="#">4</a>
+              </li>
+              <li>
+                <a href="#">5</a>
+              </li>
+              <li>
+                <a href="#">6</a>
+              </li>
+              <li>
+                <a href="#">7</a>
+              </li>
+              <li>
+                <a href="#">8</a>
+              </li>
+              <li>
+                <a href="#">>></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+      <div class="footer">
+        <footer>copyright 2012</footer>
+      </div>
     </div>
   </body>
 </html>
