--- a/core/templates/core/sub_list.html
+++ b/core/templates/core/sub_list.html
@@ -1,283 +1,241 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Submission list</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Le styles -->
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
+{% extends "core/layout.html" %}
+{% block title %}<title>Submission List</title>{% endblock %}
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ STATIC_URL }}ico/favicon.ico">
-  </head>
-
-  <body>
-    <div class="container">
-      <div class="navbar navbar-static-top">
-        <div class="navbar-inner">
-          <a class="brand" href="#">Apollo</a>
-          <ul class="nav pull-right">
-            <li class="active"><a href="#">Dashboard</a></li>
-            <li class="divider-vertical"></li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-th-large"></i> Elections<b class="caret"></b>
-            </a>
-              <ul class="dropdown-menu">
-                <li class=""><a href="#">Submission list</a></li>
-              </ul>
-            </li>
-            <li class="divider-vertical"></li>
-            <li><a href="#"><i class="icon-book"></i> Contacts</a></li>
-            <li class="divider-vertical"></li>
-            <li><button class="btn btn-default">logout</button></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span12">
-          <legend>Submission list</legend>
-          <form class="form-inline well" action="">
-              <input type="text" class="" placeholder="Monitor ID">
-              <input type="text" class="" placeholder="Date">
-              <input type="text" class="span4" placeholder="Location">
-              <input type="text" class="span3" placeholder="PDID"><br>
-              <select class="">
-                <option disabled selected style='display:none;'>- - Setup Status - -</option>
-                <option>All</option>
-              </select>
-              <select class="">
-                <option disabled selected style='display:none;'>- - Voting Status - -</option>
-                <option>All</option>
-              </select>   
-              <select class="">
-                <option disabled selected style='display:none;'>- - Closing Status - -</option>
-                <option>All</option>
-              </select> 
-              <select class="">
-                <option disabled selected style='display:none;'>- - Counting Status - -</option>
-                <option>All</option>
-              </select>
-              <select class="">
-                <option disabled selected style='display:none;'>- - EZ ID Match Status - -</option>
-                <option>All</option>
-              </select><br>
-              <button class="btn btn-info" type="submit">Filter</button>
-              <button class="btn btn-danger" type="submit">Reset</button>
-              <button class="btn btn-success" type="submit">SMS</button>
-          </form>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span12">
-          <table class="table table-striped well">
-            <thead >
-              <tr>
-                <th>Monitor ID</th>
-                <th>Province</th>
-                <th>District</th>
-                <th>Polling Station</th>
-                <th>Supervisor</th>
-                <th>Monitor</th>
-                <th>S</th>
-                <th>V</th>
-                <th>Cl</th>
-                <th>Co</th>
-                <th>Edit</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><a href="sub_edit.html">Edit</a></td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-              <tr>
-                <td>10014</td>
-                <td>Lagos</td>
-                <td>Ikeja</td>
-                <td>Ajanaku</td>
-                <td>Joy Okomowho</td>
-                <td>Peter Okoye</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Edit</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span12">
-          <div class="pagination pagination-centered">
-            <ul>
-              <li>
-                <a href="#">1</a>
-              </li>
-              <li>
-                <a href="#">2</a>
-              </li>
-              <li>
-                <a href="#">3</a>
-              </li>
-              <li>
-                <a href="#">4</a>
-              </li>
-              <li>
-                <a href="#">5</a>
-              </li>
-              <li>
-                <a href="#">6</a>
-              </li>
-              <li>
-                <a href="#">7</a>
-              </li>
-              <li>
-                <a href="#">8</a>
-              </li>
-              <li>
-                <a href="#">>></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
-        <footer>copyright 2012</footer>
-      </div>
+{% block content %}
+<div class="row">
+  <div class="span12">
+    <legend>Submission list</legend>
+    <form class="form-inline well" action="">
+        <input type="text" class="" placeholder="Monitor ID">
+        <input type="text" class="" placeholder="Date">
+        <input type="text" class="span4" placeholder="Location">
+        <input type="text" class="span3" placeholder="PDID"><br>
+        <select class="">
+          <option disabled selected style='display:none;'>- - Setup Status - -</option>
+          <option>All</option>
+        </select>
+        <select class="">
+          <option disabled selected style='display:none;'>- - Voting Status - -</option>
+          <option>All</option>
+        </select>   
+        <select class="">
+          <option disabled selected style='display:none;'>- - Closing Status - -</option>
+          <option>All</option>
+        </select> 
+        <select class="">
+          <option disabled selected style='display:none;'>- - Counting Status - -</option>
+          <option>All</option>
+        </select>
+        <select class="">
+          <option disabled selected style='display:none;'>- - EZ ID Match Status - -</option>
+          <option>All</option>
+        </select><br>
+        <button class="btn btn-info" type="submit">Filter</button>
+        <button class="btn btn-danger" type="submit">Reset</button>
+        <button class="btn btn-success" type="submit">SMS</button>
+    </form>
+  </div>
+</div>
+<div class="row">
+  <div class="span12">
+    <table class="table table-striped well">
+      <thead >
+        <tr>
+          <th>Monitor ID</th>
+          <th>Province</th>
+          <th>District</th>
+          <th>Polling Station</th>
+          <th>Supervisor</th>
+          <th>Monitor</th>
+          <th>S</th>
+          <th>V</th>
+          <th>Cl</th>
+          <th>Co</th>
+          <th>Edit</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td><a href="sub_edit.html">Edit</a></td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+        <tr>
+          <td>10014</td>
+          <td>Lagos</td>
+          <td>Ikeja</td>
+          <td>Ajanaku</td>
+          <td>Joy Okomowho</td>
+          <td>Peter Okoye</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Edit</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="span12">
+    <div class="pagination pagination-centered">
+      <ul>
+        <li>
+          <a href="#">1</a>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">4</a>
+        </li>
+        <li>
+          <a href="#">5</a>
+        </li>
+        <li>
+          <a href="#">6</a>
+        </li>
+        <li>
+          <a href="#">7</a>
+        </li>
+        <li>
+          <a href="#">8</a>
+        </li>
+        <li>
+          <a href="#">>></a>
+        </li>
+      </ul>
     </div>
-  </body>
-</html>
+  </div>
+</div>
+
+{% endblock %}
