--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -26,7 +26,7 @@
         <div class="navbar-inner">
           <a class="brand" href="#">Apollo</a>
           <ul class="nav pull-right">
-            <li class="active"><a href="#">Dashboard</a></li>
+            <li class="active"><a href="#"><i class="icon-home"></i> Dashboard</a></li>
             <li class="divider-vertical"></li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-th-large"></i> Elections<b class="caret"></b>
             </a>
@@ -35,7 +35,7 @@
               </ul>
             </li>
             <li class="divider-vertical"></li>
-            <li><a href="contacts.html"><i class="icon-book"></i> Contacts</a></li>
+            <li><a href="contacts.html"><i class="icon-user"></i> Contacts</a></li>
             <li class="divider-vertical"></li>
             <a href="{% url user-logout %}" class="btn btn-default">logout</a>
           </ul>
