edited title tag on layout page to suit all templates

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "core/layout.html" %}
-{% block title %}<title>Submission Edit</title>{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
 <div class="row">
