--- a/core/templates/core/sub_list.html
+++ b/core/templates/core/sub_list.html
@@ -1,5 +1,5 @@
 {% extends "core/layout.html" %}
-{% block title %}<title>Submission List</title>{% endblock %}
+{% block title %}Submission List{% endblock %}
 
 {% block content %}
 <div class="row">
