--- a/core/templates/core/contacts.html
+++ b/core/templates/core/contacts.html
@@ -1,5 +1,5 @@
 {% extends "core/layout.html" %}
-{% block title %}<title>Contacts</title>{% endblock %}
+{% block title %}Contacts{% endblock %}
 {% block content %}
  <div class="row">
     <div class="span12">
