--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="span12">
     <legend>Dashboard</legend>
-    <form class="form-horizontal well" action="" method="POST" accept-charset="utf-8">
+    <form class="form-horizontal well" action="" method="" accept-charset="utf-8">
       <select class="">
           <option disabled selected style='display:none;'>- - Province - -</option>
           <option>All</option>
