--- a/core/templates/core/forms_menu.html
+++ b/core/templates/core/forms_menu.html
@@ -1,3 +1,3 @@
 {% for form in forms %}
-<li><a href=""><i class="icon-book"></i> {{ form.name }}</a></li>
+<li><a href=""><i class="icon-check"></i> {{ form.name }}</a></li>
 {% endfor %}
