--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -28,14 +28,14 @@
           <ul class="nav pull-right">
             <li class="active"><a href="#"><i class="icon-home"></i> Dashboard</a></li>
             <li class="divider-vertical"></li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-th-large"></i> Elections<b class="caret"></b>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-edit"></i> Forms<b class="caret"></b>
             </a>
               <ul class="dropdown-menu">
-                <li class="sub_list.html"><a href="#">Submission list</a></li>
+                <li class="sub_list.html"><a href="#">
+            {% forms_menu %}</a></li>
               </ul>
             </li>
             <li class="divider-vertical"></li>
-            {% forms_menu %}
             <li><a href="contacts.html"><i class="icon-user"></i> Contacts</a></li>
             <li class="divider-vertical"></li>
             <a href="{% url user-logout %}" class="btn btn-default">logout</a>
