dynamic population of submissions on templates

--- a/core/templates/core/submission_list.html
+++ b/core/templates/core/submission_list.html
@@ -9,7 +9,7 @@
         {% submission_header form %}
       </thead>
       <tbody>
-        {% submission_items submissions %}
+        {% submission_items submissions form %}
       </tbody>
     </table>
   </div>
