--- a/core/templates/core/submission_list.html
+++ b/core/templates/core/submission_list.html
@@ -1,5 +1,5 @@
 {% extends "core/layout.html" %}{% load apollo %}
-{% block title %}Submission List{% endblock %}
+{{ page_title }}
 
 {% block content %}
 <div class="row">
