--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -26,6 +26,7 @@
 </div>
 <div class="row-fluid">
   <div class="span6 well">
+    <legend>Setup</legend>
     <div class="progress">
       <div class="bar bar-success" style="width: 30%;"></div>
       <div class="bar bar-warning" style="width: 50%;"></div>
