--- a/core/templates/core/submission_edit.html
+++ b/core/templates/core/submission_edit.html
@@ -47,12 +47,12 @@
             <th>Supervisor</th>
             <td>{{ submission.observer.supervisor }}</td>
             {% for sibling in siblings %}
-            <td>{{ sibling.observer.supervisor }}</td>
+            <td>{{ sibling.observer.supervisor|default_if_none:"" }}</td>
             {% endfor %}
           </tr>
         </thead>
       </table>
-      <table class="table table-striped table-bordered">
+      <table class="table table-striped table-bordered table-hover">
         <tbody>
           <tr>
             <td colspan="2">&nbsp;</td>
@@ -69,7 +69,7 @@
           </tr>
           {% endif %}
           {% for field in fieldset %}
-          <tr>
+          <tr{% if field.name in object.overrides %} class="warning"{% endif %}>
             <td>{{ field.name }}</td>
             <td>{{ field.help_text }}
               {% if field.field.choices %}
