django-bootstrap-pagination for handling pagination

--- a/core/templates/core/submission_list.html
+++ b/core/templates/core/submission_list.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}{% load apollo %}
+{% extends "core/layout.html" %}{% load apollo %}{% load bootstrap_pagination %}
 {{ page_title }}
 
 {% block content %}
@@ -17,37 +17,7 @@
 
 <div class="row">
   <div class="span12">
-    <div class="pagination pagination-centered">
-      <ul>
-        <li>
-          <a href="#">1</a>
-        </li>
-        <li>
-          <a href="#">2</a>
-        </li>
-        <li>
-          <a href="#">3</a>
-        </li>
-        <li>
-          <a href="#">4</a>
-        </li>
-        <li>
-          <a href="#">5</a>
-        </li>
-        <li>
-          <a href="#">6</a>
-        </li>
-        <li>
-          <a href="#">7</a>
-        </li>
-        <li>
-          <a href="#">8</a>
-        </li>
-        <li>
-          <a href="#">>></a>
-        </li>
-      </ul>
-    </div>
+  {% bootstrap_paginate page_obj range=10 %}
   </div>
 </div>
 
