icons for group statuses

--- a/core/templates/core/submission_header.html
+++ b/core/templates/core/submission_header.html
@@ -6,7 +6,7 @@
     <th>Supervisor</th>
     <th>Monitor</th>
     {% for group in form_groups %}
-    <th>{{ group.name }}</th>
+    <th style="text-align:center">{{ group.name }}</th>
     {% endfor %}
-    <th>Edit</th>
+    <th style="text-align:center">Edit</th>
 </tr>
