Linked contact menu on page layout to contact url

--- a/core/templates/core/contact_list.html
+++ b/core/templates/core/contact_list.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}{% load apollo %}
+{% extends "core/layout.html" %}{% load apollo %}{% load bootstrap_pagination %}
 {% block title %}Contact List{% endblock %}
 
 {% block content %}
@@ -19,12 +19,12 @@
       <tbody>
         {% for contact in contacts %}
         <tr>
-          <td>{{ contact.observer_id|default_if_none: "" }}</td>
+          <td>{{ contact.observer_id|default_if_none:"" }}</td>
           <td>{{ contact.name }}</td>
           <td>{{ contact.role }}</td>
-          <td>{{ contact.phone|default_if_none: "" }}</td>
+          <td>{{ contact.phone|default_if_none:"" }}</td>
           <td>{{ contact.location }}</td>
-          <td>{{ contact.partner|default_if_none: "" }}</td>
+          <td>{{ contact.partner|default_if_none:"" }}</td>
           <td><a href="{% url contact_edit contact.pk %}">Edit</a></td>
         </tr>
         {% endfor %}
