--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -23,22 +23,20 @@
   <body>
     <div class="navbar navbar-static-top">
         <div class="navbar-inner">
-          <a class="brand" href="#">Apollo</a>
-          <ul class="nav pull-right">
-            <li class="active"><a href="#"><i class="icon-home"></i> Dashboard</a></li>
-            <li class="divider-vertical"></li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-edit"></i> Forms<b class="caret"></b>
-            </a>
-              <ul class="dropdown-menu">
-                <li class="sub_list.html"><a href="#">
-            {% forms_menu %}</a></li>
-              </ul>
-            </li>
-            <li class="divider-vertical"></li>
-            <li><a href="contacts.html"><i class="icon-user"></i> Contacts</a></li>
-            <li class="divider-vertical"></li>
-            <a href="{% url user-logout %}" class="btn btn-default">logout</a>
-          </ul>
+          <div class="container">
+            <a class="brand" href="#">Apollo</a>
+            <ul class="nav pull-right">
+              <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
+              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-edit"></i> Forms<b class="caret"></b>
+              </a>
+                <ul class="dropdown-menu">
+              {% forms_menu %}
+                </ul>
+              </li>
+              <li><a href="{% url contacts_list%}"><i class="icon-user"></i> Contacts</a></li>
+              <a href="{% url user-logout %}" class="pull-left btn btn-default">Logout</a>
+            </ul>
+          </div>
         </div>
       </div>
     <div class="container">
