hyperlink cancel button to return to submissions list

--- a/core/templates/core/submission_edit.html
+++ b/core/templates/core/submission_edit.html
@@ -98,7 +98,7 @@
       <button type="submit" class="btn btn-info btn-large btn-block">Save</button>
     </div>
     <div class="span2">
-      <button class="btn btn-large btn-block">Cancel</button>
+      <a class="btn btn-large btn-block" href="{% url submissions_list object.form.pk %}">Cancel</a>
     </div>
   </div>
   </form>
