--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -9,7 +9,7 @@
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-     <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.1.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/custom.js"></script>
@@ -41,7 +41,7 @@
         </div>
       </div>
     <div class="container con_style">
-      <h2 class="h2_style well">{{ page_title }}</h2>
+      <h2 class="h2_style">{{ page_title }}</h2>
     </div>
     <div class="container">
       {% block content %}{% endblock %}
